--- a/.github/workflows/flutter-drive.yml
+++ b/.github/workflows/flutter-drive.yml
@@ -4,28 +4,23 @@ name: flutter drive
 # Trigger the workflow on push or pull request.
 on: [push, pull_request]
 
-# A workflow run is made up of one or more jobs.
+env:
+  flutter_version: "1.17.4"
+
 jobs:
-  # id of job, a string that is unique to the "jobs" node above.
   drive:
-    # Creates a build matrix for your jobs. You can define different
-    # variations of an environment to run each job in.
     strategy:
-      # A set of different configurations of the virtual environment.
       matrix:
         device:
-        - "iPhone 8 (13.5)"
-        - "iPhone 11 Pro Max (13.5)"
-      # When set to true, GitHub cancels all in-progress jobs if any matrix job
-      # fails.
-      fail-fast: false
-    # The type of machine to run the job on.
+        - "iPhone 8 (13.5)" # TODO find a way to handle iOS version changes (e.g. 13.1->13.5)
+      fail-fast: true
+    timeout-minutes: 20 # Fail after 20 minutes.
     runs-on: macOS-latest
-    # Contains a sequence of tasks.
+
     steps:
-    # A name for your step to display on GitHub.
     - name: "List all simulators"
       run: "xcrun instruments -s"
+
     - name: "Start Simulator"
       run: |
         UDID=$(
@@ -35,15 +30,32 @@ jobs:
             -v 'device=${{ matrix.device }}' \
             '$1 == device { print $2 }'
         )
-
         xcrun simctl boot "${UDID:?No Simulator with this name found}"
-    # The branch or tag ref that triggered the workflow will be checked out.
-    # https://github.com/actions/checkout
-    - uses: actions/checkout@v1
-    # Sets up a flutter environment.
-    # https://github.com/marketplace/actions/flutter-action
-    - uses: subosito/flutter-action@v1
+    
+    - name: Checkout
+      uses: actions/checkout@28c7f3d2b5162b5ddd3dfd9a45aa55eaf396478b
+    
+    - name: Setup Flutter
+      uses: subosito/flutter-action@v1
       with:
-        channel: 'stable' # or: 'dev' or 'beta'
-    - name: "Run Flutter Driver tests"
-      run: "flutter drive --target=test_driver/app.dart"
+        flutter-version: ${{ env.flutter_version }}
+
+    - name: "Print flutter path"
+      run: |
+        echo FLUTTER_HOME: $FLUTTER_HOME
+
+    - name: "Confirm the contents of the Flutter directory"
+      run: |
+        ls $FLUTTER_HOME
+
+    - name: Cache Flutter dependencies
+      uses: actions/cache@v2
+      with:
+        path: /opt/hostedtoolcache/flutter
+        key: ${{ runner.OS }}-flutter-install-cache-${{ env.flutter_version }}
+
+    - name: Install dependencies
+      run: flutter pub get
+
+    - name: Run Flutter Driver tests
+      run: "flutter drive --target=test_driver/app.dart" 
