--- a/.github/workflows/flutter-drive.yml
+++ b/.github/workflows/flutter-drive.yml
@@ -33,10 +33,10 @@ jobs:
         xcrun simctl boot "${UDID:?No Simulator with this name found}"
     
     - name: Checkout
-      uses: actions/checkout@28c7f3d2b5162b5ddd3dfd9a45aa55eaf396478b
+      uses: actions/checkout@v2
     
     - name: Setup Flutter
-      uses: subosito/flutter-action@v1
+      uses: subosito/flutter-action@40bc2f6940785fd81048dc949a68866be510469e
       with:
         flutter-version: ${{ env.flutter_version }}
 
