--- a/.github/workflows/flutter-drive.yml
+++ b/.github/workflows/flutter-drive.yml
@@ -6,6 +6,7 @@ on: [push, pull_request]
 
 env:
   flutter_version: "1.17.4"
+  CI: github-actions
 
 jobs:
   drive:
@@ -36,23 +37,20 @@ jobs:
       uses: actions/checkout@v2
     
     - name: Setup Flutter
-      uses: subosito/flutter-action@40bc2f6940785fd81048dc949a68866be510469e
+      uses: subosito/flutter-action@40bc2f
       with:
         flutter-version: ${{ env.flutter_version }}
 
-    - name: "Print flutter path"
-      run: |
-        echo FLUTTER_HOME: $FLUTTER_HOME
-
-    - name: "Confirm the contents of the Flutter directory"
-      run: |
-        ls $FLUTTER_HOME
-
-    - name: Cache Flutter dependencies
+    - name: Setup Flutter Cache
       uses: actions/cache@v2
       with:
-        path: /opt/hostedtoolcache/flutter
-        key: ${{ runner.OS }}-flutter-install-cache-${{ env.flutter_version }}
+        path: $FLUTTER_HOME
+        # The cache should reset when we update the version number: 
+        key: ${{ runner.OS }}-flutter-install-cache-${{ env.flutter_version }} 
+        restore-keys: ${{ runner.OS }}-flutter-install-cache-
+    
+    - name: Confirm Flutter version in use
+      run: cat $FLUTTER_HOME/version
 
     - name: Install dependencies
       run: flutter pub get
