--- a/.github/workflows/flutter-drive.yml
+++ b/.github/workflows/flutter-drive.yml
@@ -7,16 +7,17 @@ on: [push, pull_request]
 env:
   flutter_version: "1.12.13+hotfix.8" # If I was using flutterw this would need to be pulled from flutterw/version to keep things in sync
   CI: github-actions
+  DEVELOPER_DIR: /Applications/Xcode_11.3.1.app/Contents/Developer
 
 jobs:
   drive:
     strategy:
       matrix:
         device:
-        - "iPhone 8 (13.5)" # TODO find a way to handle iOS version changes (e.g. 13.1->13.5)
+        - "iPhone 8 (13.3)" # TODO find a way to handle iOS version changes (e.g. 13.1->13.5)
       fail-fast: true
     timeout-minutes: 20 # Fail after 20 minutes.
-    runs-on: macOS-latest
+    runs-on: macos-10.15
 
     steps:
     - name: "List all simulators"
