--- a/.github/workflows/flutter-drive-ios.yml
+++ b/.github/workflows/flutter-drive-ios.yml
@@ -1,5 +1,5 @@
 # Name of your workflow.
-name: flutter drive
+name: flutter drive iOS
 
 # Trigger the workflow on push or pull request.
 on: [push, pull_request]
