Experiment with shells....

--- a/.github/workflows/flutter-drive-ios.yml
+++ b/.github/workflows/flutter-drive-ios.yml
@@ -20,6 +20,9 @@ jobs:
     runs-on: macos-10.15
 
     steps:
+    - name: Check shell
+      run: echo $SHELL
+        
     - name: "List all simulators"
       run: "xcrun instruments -s"
 
